# djio

./: .codespellignore  .commitlintrc.json.license  .deny.toml  .gitignore  .justfile  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc.yaml  .rustfmt.toml  .taplo.toml  .yamlfmt  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: build-and-test.yaml  continuous-integration.yaml  dependency-audit.yaml  pre-commit.yaml  security-audit.yaml  test.yaml
examples/: midi_dj_controller_hotplug.rs  midi_hotplug.rs  ni_traktor_kontrol_s4mk3.rs
src/: controller.rs  deck.rs  hid.rs  lib.rs  midi.rs
src/controller/: midi.rs  mod.rs  thread.rs
src/controller/midi/: context.rs  mod.rs
src/devices/: korg_kaoss_dj.rs  mod.rs  ni_traktor_s4mk3.rs  pioneer_ddj_400.rs
src/devices/denon_dj_mc6000mk2/: input.rs  mod.rs  output.rs
src/devices/generic_midi/: input.rs  mod.rs  output.rs
src/devices/korg_kaoss_dj/: input.rs  mod.rs  output.rs
src/devices/ni_traktor_kontrol_s4mk3/: mod.rs
src/devices/pioneer_ddj_400/: input.rs  mod.rs  output.rs
src/hid/: mod.rs  report.rs  thread.rs
src/input/: mod.rs  tests.rs
src/input/mapping/: korg_kaoss_dj.rs  mod.rs  pioneer_ddj_400.rs
src/midi/: midir.rs  mod.rs
src/output/: blinking_led_task.rs  mod.rs
src/param/: atomic.rs  mod.rs  ramping.rs  registry.rs
